--- a/Basic JavaScript/Project9timer/index.html
+++ b/Basic JavaScript/Project9timer/index.html
@@ -7,9 +7,9 @@
         <script src="./JS/main.js"></script>
     </head>
     <body>
-        <p>You must be 18 to vote</p><br>
-        <input id="age" value="8" >How old are you?</input><br>
-        <button onclick="vote()">Click here</button><br>
-        <p id="canVote"></p>      
+        <p>How many seconds would you like to set your alarm for?</p>
+        <input id="seconds" value="10"/>
+        <button onclick="countdown()">Click here</button>
+        <p id="timer"></p>
     </body>
 </html>
