--- a/Basic JavaScript/Project1_expressions_alert/index.html
+++ b/Basic JavaScript/Project1_expressions_alert/index.html
@@ -7,7 +7,8 @@
         <script src="./JS/main.js"></script>
     </head>
     <body>
-        <button onclick="document.getElementById('push').innerHTML = 'You pushed a button' ">push me</button>
+        <br>
+        <button onclick=myFunction()>push me</button>
         <div id="push">push a button</div>
         
     </body>
