--- a/Basic JavaScript/Project3_math/index.html
+++ b/Basic JavaScript/Project3_math/index.html
@@ -8,8 +8,13 @@
     </head>
     <body>
         <p id="math"></p>
+        <p id="math1"></p>
         <p id="math2"></p>
         <p id="math3"></p>
+        <p id="math4"></p>
+        <p id="math5"></p>
+        <p id="math6"></p>
+        <p id="math7"></p>
 
         <script src="./JS/main.js"></script>
     </body>
