--- a/Basic JavaScript/Project3_math/index.html
+++ b/Basic JavaScript/Project3_math/index.html
@@ -7,6 +7,8 @@
         
     </head>
     <body>
+        <button onclick="doMath()">Do Math</button>
+  
         <p id="math"></p>
         <p id="math1"></p>
         <p id="math2"></p>
