--- a/Basic JavaScript/ProjectLoop/index.html
+++ b/Basic JavaScript/ProjectLoop/index.html
@@ -10,7 +10,7 @@
         <p id="counting"></p>
         <button onclick="count()">Count Loop</button>
 
-        <p id="array">array</p>
+        <p id="array"></p>
         <button onclick="arrayLoop()">Array Loop</button>
 
 
